--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -15,8 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    # keep in sync with .pre-commit-config.yaml
-    - run: python -Im pip install --user ruff==0.4.10
+    # keep in sync with .pre-commit-config.yaml and tests/requirements.txt
+    - run: python -Im pip install --user ruff==0.9.4
 
     - name: Run ruff
-      run: ruff --output-format=github grapple
+      run: ruff check --output-format=github grapple
