--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
         run: uvx flit build --format wheel
 
       - name: 🧪 Run tox targets for Python ${{ matrix.python-version }}
-        run: uvx --with tox-uv,tox-gh-actions tox --installpkg ./dist/*.whl
+        run: uvx --with tox-uv --with tox-gh-actions tox --installpkg ./dist/*.whl
 
       - name: ⬆️ Upload coverage data
         uses: actions/upload-artifact@v4
@@ -91,7 +91,7 @@ jobs:
       - name: 🧪 Run tox targets for Python ${{ matrix.python-version }}
         env:
           DATABASE_URL: 'postgres://postgres:postgres@localhost:5432/postgres'
-        run: uvx --with tox-uv,tox-gh-actions tox --installpkg ./dist/*.whl
+        run: uvx --with tox-uv --with tox-gh-actions tox --installpkg ./dist/*.whl
 
       - name: ⬆️ Upload coverage data
         uses: actions/upload-artifact@v4
@@ -113,7 +113,8 @@ jobs:
           # Use latest Python, so it understands all syntax.
           python-version: ${{env.PYTHON_LATEST}}
 
-      - run: python -Im pip install --upgrade coverage[toml]
+      - name: Install uv
+        uses: hynek/setup-cached-uv@v2
 
       - name: ⬇️ Download coverage data
         uses: actions/download-artifact@v4
@@ -123,8 +124,8 @@ jobs:
 
       - name: ＋ Generate report
         run: |
-          python -Im coverage html --skip-covered --skip-empty
-          python -Im coverage report
+          uvx coverage html --skip-covered --skip-empty
+          uvx coverage report
           echo "## Coverage summary" >> $GITHUB_STEP_SUMMARY
           python -Im coverage report --format=markdown >> $GITHUB_STEP_SUMMARY
       - name: 📈 Upload HTML report
