--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        persist-credentials: false
 
     # keep in sync with .pre-commit-config.yaml and tests/requirements.txt
     - run: python -Im pip install --user ruff==0.9.4
