--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ min_version = 4.0
 
 envlist =
     py{39,310,311,312}-django{42}-wagtail{63,64}
-    py{310,311,312}-django{50}-wagtail{63,64}
+    py{312}-django{50}-wagtail{63}
     py{310,311,312,313}-django{51}-wagtail{63,64}
     interactive
 
@@ -36,7 +36,7 @@ change_dir = {tox_root}/tests
 
 deps =
     flit>=3.8
-    coverage[toml]>=7.0,<8.0
+    coverage>=7.0,<8.0
     factory-boy==3.2.1
     wagtail-factories>=4.1.0
     django-cors-headers==3.4.0
@@ -57,7 +57,7 @@ commands =
 [testenv:coverage-report]
 ; a bit of a hack - we keep deps to a minimum, and move coverage data to the tox root for easier excludes
 deps =
-install_command = python -Im pip install -U "coverage[toml]>=7.0,<8.0"
+install_command = python -Im pip install -U "coverage>=7.0,<8.0"
 change_dir = {tox_root}
 allowlist_externals = mv
 pre_commands =
